<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="@color/background"
android:layout_height="fill_parent"
android:layout_width="fill_parent"
android:padding="30dip"
android:orientation="horizontal" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dip"
        android:text="@string/main_title"
        android:textSize="24.5sp" />

    <Button
        android:id="@+id/check_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/btn_home"
        android:text="@string/check_label" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/btn_info"
        android:text="@string/about_label" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.18"
        android:background="@color/btn_exit"
        android:text="@string/exit_label" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/copy" />
</LinearLayout>

</LinearLayout>